# Abel

./: .editorconfig  .gitignore  Abel.slnx  README.md
.github/workflows/: ci.yml  release.yml
Abel/: Abel.csproj  DependencyAdder.cs  ModuleScaffolder.cs  Program.cs  ProjectFormatter.cs  ProjectInitializer.cs  ProjectLinter.cs  README.md  RegistryCli.cs
Abel.Core/: Abel.Core.csproj  AbelRunner.cs  ChildProcessScope.cs  CmakerBuilder.cs  DependencySpec.cs  OutputType.cs  PackageEntry.cs  PackageRegistry.cs  Project.cs  ProjectConfig.cs  ProjectDependencySpec.cs  ToolChecker.cs
Abel.Tests/: Abel.Tests.csproj  AbelCliIntegrationTests.cs
Example/ModuleNestedDependencies/: CMakeLists.txt  project.json
Example/ModuleNestedDependencies/.abel/local_deps/lib/cmake/log/: log-targets.cmake
Example/ModuleNestedDependencies/.abel/local_deps/lib/cmake/log/cxx_modules/src/: log.cppm
Example/ModuleNestedDependencies/.abel/local_deps/lib/cmake/math_module/: math_module-config.cmake  math_module-targets.cmake
Example/ModuleNestedDependencies/.abel/local_deps/lib/cmake/math_module/cxx_modules/src/: math.cppm
Example/ModuleNestedDependencies/src/: math_impl.cpp
Example/ModuleNestedDependencies/src/logger_module/: CMakeLists.txt  project.json
Example/ModuleNestedDependencies/src/logger_module/src/: log_impl.cpp
Example/ModuleNoDependencies/: CMakeLists.txt  project.json
Example/ModuleNoDependencies/.abel/local_deps/lib/cmake/math_module/: math_module-config.cmake  math_module-targets-debug.cmake  math_module-targets.cmake
Example/ModuleNoDependencies/src/: math.cppm  math_impl.cpp
Example/ProgramHeaderSrc/: CMakeLists.txt  main.cpp  project.json
Example/ProgramHeaderSrc/include/math/: math_operations.h
Example/ProgramHeaderSrc/src/: math_internal.h  math_operations.cpp
Example/ProgramImGuiFlecsSdl/: CMakeLists.txt  main.cpp  project.json
Example/ProgramNestedDependencies/: CMakeLists.txt  main.cpp  project.json
Example/ProgramNestedDependencies/.abel/local_deps/lib/cmake/log/: log-config.cmake  log-targets-debug.cmake  log-targets.cmake
Example/ProgramNestedDependencies/logger_module/: CMakeLists.txt
Example/ProgramNoDependencies/: CMakeLists.txt  project.json
Example/ProgramThirdPartyDependency/: CMakeLists.txt  main.cpp  project.json
Example/StellaVM/: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp  project.json
Example/StellaVM/vm/: CMakeLists.txt  project.json
Example/StellaVM/vm/src/: vm.cppm  vm_impl.cpp
Example/StellaVM/vm/tests/: StellaVM_test.cpp
artifacts/.tmp-tools/.store/abel.tool/0.1.0/: project.assets.json
artifacts/.tmp-tools/.store/abel.tool/0.1.0/abel.tool/0.1.0/: .nupkg.metadata  Abel.Tool.nupkg  Abel.Tool.nuspec  abel.tool.0.1.0.nupkg.sha512
artifacts/.tmp-tools/.store/abel.tool/0.1.0/abel.tool/0.1.0/tools/net10.0/any/: Abel.Core.xml  Abel.deps.json  Abel.xml  DotnetToolSettings.xml
artifacts/add-smoke/AddSmokeApp/: CMakeLists.txt  main.cpp  project.json
artifacts/init-global-smoke/ToolSmoke/: main.cpp  project.json
artifacts/init-smoke2/SmokeExe/: main.cpp  project.json
artifacts/init-smoke2/SmokeModule/: project.json
artifacts/init-smoke2/SmokeModule/src/: smokemodule.cppm  smokemodule_impl.cpp
artifacts/init-smoke3/DemoApp/: main.cpp  project.json
artifacts/init-smoke3/DemoMod/: project.json
artifacts/init-smoke3/DemoMod/src/: demomod.cppm  demomod_impl.cpp
artifacts/nupkg/: Abel.Tool.0.1.0.nupkg  Abel.Tool.0.1.1.nupkg  Abel.Tool.0.1.2.nupkg  Abel.Tool.0.1.3.nupkg  Abel.Tool.0.1.4.nupkg  Abel.Tool.0.1.5.nupkg
artifacts/progress-smoke/ProgressApp/: CMakeLists.txt  main.cpp  project.json
scripts/: release.ps1
